# DAQ-YOLO

DAQ-YOLO/: CITATION.cff  IMAGE_UPLOAD_GUIDE_CN.md  NOTICE.md  README.md  pyproject.toml  requirements.txt  train_daq.py
DAQ-YOLO/configs/: yolov8n-daq.yaml
DAQ-YOLO/daq_yolo/: __init__.py
DAQ-YOLO/daq_yolo/integration/: __init__.py  legacy_yolov8.py
DAQ-YOLO/daq_yolo/losses/: __init__.py  aqfl.py
DAQ-YOLO/daq_yolo/modules/: __init__.py  d_ema.py
DAQ-YOLO/daq_yolo/nms/: __init__.py  qha_nms.py
DAQ-YOLO/data/images/: README.md
DAQ-YOLO/data/labels/test/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
DAQ-YOLO/data/labels/train/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+40 more)
DAQ-YOLO/data/labels/val/: 775.txt  776.txt  777.txt  778.txt  779.txt  780.txt  781.txt  782.txt  783.txt  784.txt
DAQ-YOLO/docs/: ALGORITHM_ALIGNMENT.md  INTEGRATION_GUIDE.md
DAQ-YOLO/patches/: parse_model_snippet.py
DAQ-YOLO/tests/: test_aqfl.py  test_d_ema.py  test_qha_nms.py
