[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daq-yolo-components"
version = "0.1.0"
description = "Paper-aligned AQFL, D-EMA and QHA-NMS components for DAQ-YOLO"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["torch>=1.13", "torchvision>=0.14"]
license = {text = "GPL-3.0-or-later"}

[tool.setuptools.packages.find]
include = ["daq_yolo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
